Checkin of latest files

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <li class="grow"><a href="about.html">About</a></li>
       <li class="grow"><a href="contact.html">Contact</a></li>
       <li class="grow"><a href="faq.html">FAQ'S</a></li>
-      <li class="grow"><a href="officers.html">Officers</a></li>
+      <li class="grow"><a href="OurTeam.html">Our Team</a></li>
      </ul>
    </nav> 
     
