--- a/faq.html
+++ b/faq.html
@@ -20,9 +20,10 @@
     <nav>
   <ul>
  <li class="grow"><a href="index-2.html">Home</a></li>
-      <li class="grow"><a href="resources.html">Resources</a></li>
+      <li class="grow"><a href="about.html">About</a></li>
       <li class="grow"><a href="contact.html">Contact</a></li>
       <li class="grow"><a href="faq.html">FAQ'S</a></li>
+      <li class="grow"><a href="OurTeam.html">Our Team</a></li>
      </ul>
    </nav>
     <br>
