--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
 <div class="headerImage">
     <br>
- <h1>&copy;xRGlove</h1>       
+ <h1>xRGlove</h1>       
 </div>
 <br>
  <nav>
@@ -26,27 +26,27 @@
       <li class="grow"><a href="about.html">About</a></li>
       <li class="grow"><a href="contact.html">Contact</a></li>
       <li class="grow"><a href="faq.html">FAQ'S</a></li>
-      <li class="grow"><a href="officers.html">Officers</a></li>
+      <li class="grow"><a href="OurTeam.html">Our Team</a></li>
      </ul>
    </nav> 
 <br>
 
 <div class="item">
-   <img src="handwash6.jpg">
+   <img src="germ_hands.jpg">
   <h2>Mission Statement</h2>
-    <p>Our organization believes in making healthcare afordable and accesible to everyone no matter their financial status. </p>
+    <p>Our mission is to improve employee hygiene through our xRGlove RFID band which provides an efficient and effective way to reach this goal. </p>
     </div>
    
    
         <div class="item">
       <img src="xRGlove-logo.jpg">
       <h2>Our Product</h2>
-            <p>We are an organization that provides resources like Kaiser Permenante to help everyone no matter their financial status.</p>
+            <p> xRGlove is an innovative and cost effective technology that is simple to deploy and use while providing security and privacy.</p>
     </div>
    
    
       <div class="item">
-          <h2>&copy;xRGlove Demonstration</h2>
+          <h2>&copy;xRGlove Overview</h2>
     <video width="395" height="395" controls>
         <source src="IMG_6665.mov" type="video/mp4">
     </video>
