--- a/index-2.old.copy.html
+++ b/index-2.old.copy.html
@@ -1,7 +1,7 @@
 <html>
 
-<!-- Mirrored from healthcareforhomeless.netlify.com/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Apr 2019 04:27:28 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- xRGlove website design, Tue, 30 Apr 2019 04:27:26 GMT -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 <link href="style.css" rel="stylesheet"> 
     <title>Health care</title>
