--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    
    
         <div class="item">
-      <img src="xRGlove_logo.jpg">
+      <img src="xRGlove_logo.JPG">
       <h2>Our Product</h2>
             <p> xRGlove is an innovative and cost effective technology that is simple to deploy and use while providing security and privacy.</p>
     </div>
